hpa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
  labels:
    app: echo-app
  namespace: workshop
spec:
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        name: echo-app
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "100m"
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: busybox
#   labels:
#     app: busybox
#   namespace: workshop
# spec:
#   selector:
#     matchLabels:
#       app: busybox
#   template:
#     metadata:
#       labels:
#         app: busybox
#       name: busybox
#       namespace: workshop
#     spec:
#       containers:
#       - image: busybox
#         command:
#           - sleep
#           - "3600"
#         imagePullPolicy: IfNotPresent
#         name: busybox
#       restartPolicy: Always
